styles.css
@charset "utf-8";
/* CSS Document */

body {
	background-color: #8C7E7E;
	background-image: url(bckgrnd.gif);
	background-position: center;
	background-size: 2000px;
	background-repeat:no-repeat;
}
.audioCenter {
	margin: 10px auto;
	width: 400px;
	margin-top: -25px;
	margin-bottom: -20px;
}

iframe {
box-shadow: 0px 0px 5px #535353;
}

.heading {
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	margin-top: 30px;
	width: 500px;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-variant: small-caps;
}

.label {
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	width: 10em;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-size: 25px;
}

.center_contaner_H {
	margin-right: auto;
	margin-left: auto;
	width: 500px;
	height: 1000px;
	margin-top: 20px;
	margin-bottom: -50px;
	background-color: #FFFFFF;
	box-shadow: 0px 0px 10px #535353;
	padding:5px;
}
.navbar {
	width: 700px;
	margin-left: auto;
	margin-right: auto;
	height: 55px;
	background-color: #333;
	margin-top: -10px;
	display: flex;
	justify-content: center;
	align-items: center;
	box-shadow: 0px 0px 10px #535353;
}
ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	background-color: #333;
}
li {
	float: left;
	font-size: 20px;
	font-variant: small-caps;
}
li a, .dropbtn {
	display: inline-block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}
li a:hover, .dropdown:hover .dropbtn {
	background-color: #A30002;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}
li.dropdown {
	display: inline-block;
}
.dropdown-content {
	display: none;
	position: absolute;
	background-color: #f9f9f9;
	min-width: 160px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}
.dropdown-content a {
	color: black;
	padding: 12px 16px;
	text-decoration: none;
	display: block;
	text-align: left;
}
.dropdown-content a:hover {
	background-color: #f1f1f1
}
.show {
	display: block;
}
.handbook-div {
	background-color: white;
}
.handbook-link {
	color: black;
	margin-right: auto;
	margin-left: auto;
	width: 468px;
}
.input-holder {
	width: 400px;
	margin-left: auto;
	margin-right: auto;
	padding: -12px;
}
#btnAdd {
	width: 70px;
	font-size: 10pt;
	font-variant: small-caps;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#namein {
	width: 134px;
	font-size: 10pt;
	font-variant: small-caps;
	box-shadow: 0px 0px 1px #535353;
	padding:2px;
}
#initin {
	width: 43px;
	font-size: 10pt;
	font-variant: small-caps;
	box-shadow: 0px 0px 1px #535353;
	padding:2px;
}
#hpin {
	width: 43px;
	font-size: 10pt;
	font-variant: small-caps;
	box-shadow: 0px 0px 1px #535353;
	padding:2px;
}
.hptab {
	width: 50px;
	text-align: center;
	font-size: 10pt;
	font-variant: small-caps;
}
  .home_p {
	  font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	  margin:10px;
  }
.myFooter {
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	color:white;
	font-size: 10px;
	padding-top:10px;
	background-color:#333;
	clear: both;
    position: relative;
    z-index: 10;
    height: 3em;
    margin-top: 4em;
	bottom:-20px;
	text-align:center;
	width:100%;
	box-shadow: 0px 0px 10px #535353;
	}
	
#tav_name{
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	margin-top: 30px;
	width: 500px;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-size:24px;
	font-variant: small-caps;
}

